# TABED

./: .gitignore  LICENSE  README.md  evaluator.py  install.sh  main.py  pyproject.toml  requirements.txt  setup_env.sh  trainer.py  useful_command.sh
run_scripts/: first_ALL.sh  multi_ALL.sh  second_ALL.sh
tabed/: __init__.py  config.py
tabed/criterions/: __init__.py  base_criterion.py
tabed/datamodules/: __init__.py  dataset.py  download_datasets.py
tabed/modules/: __init__.py  _autoregressive_decoding.py  _speculative_decoding.py  decoding.py  eval_specbench.py  load_pretrained.py  mllm.py  promptsetter.py  sample.py  utils.py  w_grid.py
tabed/modules/sps/: __init__.py  candidate_generator_vlmsd.py  decoding.py  modeling_llava_vlmsd.py  utils.py
tabed/utils/: __init__.py  evaluation.py  saver.py  util.py  util_evaluation.py  utils_evaluator.py  utils_speculative_decoding.py  utils_trainer.py
tabed/utils/custom_files/: __init__.py
